[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qdc-sched"
version = "0.5.0"
description = "Modular distributed quantum computing scheduler with circuit cutting hooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "qiskit>=2.0.0",
  "qiskit-aer>=0.14.0",
  "qiskit-addon-cutting>=0.10.0",
  "networkx>=3.0",
]

[project.optional-dependencies]
ibm = [
  "qiskit-ibm-runtime>=0.24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
